<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminUI.SheduleAct">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/pick_range_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_range_button" />

        <TextView
            android:id="@+id/firstDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_date" />

        <TextView
            android:id="@+id/secondDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_shedule" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_shedule" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>